--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <html lang="en" class="full-height">
 
     <head>
-        
+
         <meta charset="utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,198 +36,275 @@
     <body>
 
         <header>
-            <!--Navbar-->
+
             <nav class="navbar-home navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+
                 <div class="container">
-                    <a class="navbar-brand" href="#">
+
+                    <a class="navbar-brand" href="/">
                         <img src="/img-futiba-club/logo.png" height="30" alt="Futiba Club">
                     </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7"
-                        aria-expanded="false" aria-label="Toggle navigation">
+
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+
                     <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
-                        <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Grupos</a>
-                            </li>
 
-                            <li class="nav-item">
-                                    <a class="nav-link" href="#">Classificação</a>
-                                </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false">
-                                Entrar
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                </div>
-                            </li>
-                        </ul>
+                        <% include elements/menu %>
 
-                    </div>
-                </div>
-            </nav>
+                    </div> <!-- Collapse Navbar -->
 
-            <!--Intro Section-->
-            <section class="view intro-2 hm-gradient">
+                </div> <!-- Container -->
+
+            </nav> <!-- Navbar -->
+
+            <section class="view intro-2 hm-gradient"> <!-- Intro Section -->
+
                 <div class="full-bg-img">
+
                     <div class="container flex-center">
+
                         <div class="row flex-center">
+
                             <div class="col-md-10 col-lg-6 text-center text-md-left margins">
+
                                 <div class="white-text">
-                                    <img src="/img-futiba-club/logo2.png" />
+
                                     <h1 class="h1-responsive font-bold mt-sm-5 wow fadeInLeft" data-wow-delay="0.3s">Desafie seus amigos</h1>
+
                                     <hr class="hr-light wow fadeInLeft" data-wow-delay="0.3s">
-                                    <h6 class="wow fadeInLeft" data-wow-delay="0.3s">Quem consegue acertar mais jogos da Copa e do Brasileirão?
-                                    </h6>
-                                    <br>
-                                    <a class="btn btn-white dark-grey-text font-bold wow fadeInLeft" data-wow-delay="0.3s">Criar conta</a>
-                                    <a class="btn btn-outline-white wow fadeInLeft" data-wow-delay="0.3s">Ver classificação</a>
+
+                                    <h6 class="wow fadeInLeft" data-wow-delay="0.3s">Quem consegue acertar mais jogos da Copa e do     Brasileirão ?</h6><br>
+
+                                    <% if (!user) { %>
+                                        <a class="btn btn-white dark-grey-text font-bold wow fadeInLeft" data-wow-delay="0.3s" href="/new-account">Criar Conta</a>
+                                    <% } %>
+
+                                    <a class="btn btn-outline-white wow fadeInLeft" data-wow-delay="0.3s">Ver Classificação</a>
 
                                 </div>
+
                             </div>
+
                             <div class="col-md-6 col-lg-6 hidden-md-down wow fadeInRight d-flex justify-content-center" data-wow-delay="0.3s">
+
                                 <img src="/img-futiba-club/mock.png" alt="" class="img-fluid">
+
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </header>
+
+                        </div> <!-- Row -->
+
+                    </div> <!-- Container -->
+
+                </div> <!-- Full Image -->
+
+            </section> <!-- Intro Section -->
+
+        </header> <!-- Header -->
 
         <section>
+
             <div class="container">
-                <h2>Classificação Grupos</h2>
+
+                <h2>Classificação - Grupos</h2>
+
                 <table class="table table-striped">
+
                     <thead>
+
                         <tr>
                             <th>#</th>
+
                             <th>Grupo</th>
+
                             <th>Pontos</th>
                         </tr>
-                    </thead>
+
+                    </thead> <!-- Table Head -->
+
                     <tbody>
+
                         <tr>
                             <th scope="row">1</th>
-                            <td>Peladeiros da noite</td>
+
+                            <td>Peladeiros do Rio</td>
+
                             <td>500</td>
                         </tr>
+
                         <tr>
                             <th scope="row">2</th>
+
                             <td>Masters of None</td>
+
                             <td>400</td>
                         </tr>
+
                         <tr>
                             <th scope="row">3</th>
+
                             <td>Filhos do Pelé</td>
+
                             <td>300</td>
                         </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
+
+                    </tbody> <!-- Table Body -->
+
+                </table> <!-- Table -->
+
+            </div> <!-- Container -->
+
+        </section> <!-- Section -->
 
         <section>
+
             <div class="container">
+
                 <div class="row">
+
                     <div class="card col">
+
                         <div class="card-body">
+
                             <form>
-                                <p class="h5 text-center mb-4">Entrar</p>
+
+                                <!-- <p class="h5 text-center mb-4">Entrar</p> -->
+
                                 <div class="md-form">
+
                                     <i class="fa fa-envelope prefix grey-text"></i>
+
                                     <input type="text" id="orangeForm-email" class="form-control">
+
                                     <label for="orangeForm-email">E-mail</label>
+
                                 </div>
 
                                 <div class="md-form">
+
                                     <i class="fa fa-lock prefix grey-text"></i>
+
                                     <input type="password" id="orangeForm-pass" class="form-control">
+
                                     <label for="orangeForm-pass">Senha</label>
+
                                 </div>
 
                                 <div class="text-center">
                                     <button class="btn btn-deep-orange">Entrar</button>
                                 </div>
+
                             </form>
-                        </div>
-                    </div>
+
+                        </div> <!-- Card Body -->
+
+                    </div> <!-- Card Col -->
 
                     <div class="card col">
+
                         <div class="card-body">
+
                             <form class="col">
-                                <p class="h5 text-center mb-4">Criar uma conta</p>
+
+                                <!-- <p class="h5 text-center mb-4">Criar conta</p> -->
 
                                 <div class="md-form">
+
                                     <i class="fa fa-user prefix grey-text"></i>
+
                                     <input type="text" id="orangeForm-name" class="form-control">
+
                                     <label for="orangeForm-name">Seu nome</label>
-                                </div>
-                                <div class="md-form">
-                                    <i class="fa fa-envelope prefix grey-text"></i>
-                                    <input type="text" id="orangeForm-email" class="form-control">
-                                    <label for="orangeForm-email">Seu e-mail</label>
+
                                 </div>
 
                                 <div class="md-form">
+
+                                    <i class="fa fa-envelope prefix grey-text"></i>
+
+                                    <input type="text" id="orangeForm-email" class="form-control">
+
+                                    <label for="orangeForm-email">Seu e-mail</label>
+
+                                </div>
+
+                                <div class="md-form">
+
                                     <i class="fa fa-lock prefix grey-text"></i>
+
                                     <input type="password" id="orangeForm-pass" class="form-control">
+
                                     <label for="orangeForm-pass">Sua senha</label>
+
                                 </div>
 
                                 <div class="text-center">
                                     <button class="btn btn-deep-orange">Criar conta</button>
                                 </div>
+
                             </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+
+                        </div> <!-- Card Body -->
+
+                    </div> <!-- Card Col -->
+
+                </div>  <!-- Row -->
+
+            </div> <!-- Container -->
+
+        </section> <!-- Section -->
 
         <section>
-            <!-- Form contact -->
-    <form>
 
-        <p class="h5 text-center mb-4">Write to us</p>
+            <form>
 
-        <div class="md-form">
-            <i class="fa fa-user prefix grey-text"></i>
-            <input type="text" id="form3" class="form-control">
-            <label for="form3">Your name</label>
-        </div>
+                <div class="md-form">
 
-        <div class="md-form">
-            <i class="fa fa-envelope prefix grey-text"></i>
-            <input type="text" id="form2" class="form-control">
-            <label for="form2">Your email</label>
-        </div>
+                    <i class="fa fa-user prefix grey-text"></i>
 
-        <div class="md-form">
-            <i class="fa fa-tag prefix grey-text"></i>
-            <input type="text" id="form32" class="form-control">
-            <label for="form34">Subject</label>
-        </div>
+                    <input type="text" id="form3" class="form-control">
 
-        <div class="md-form">
-            <i class="fa fa-pencil prefix grey-text"></i>
-            <textarea type="text" id="form8" class="md-textarea" style="height: 100px"></textarea>
-            <label for="form8">Your message</label>
-        </div>
+                    <label for="form3">Your name</label>
 
-        <div class="text-center">
-            <button class="btn btn-unique">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
-        </div>
+                </div>
 
-    </form>
-    <!-- Form contact -->
-    </section>
+                <div class="md-form">
+
+                    <i class="fa fa-envelope prefix grey-text"></i>
+
+                    <input type="text" id="form2" class="form-control">
+
+                    <label for="form2">Your email</label>
+
+                </div>
+
+                <div class="md-form">
+
+                    <i class="fa fa-tag prefix grey-text"></i>
+
+                    <input type="text" id="form32" class="form-control">
+
+                    <label for="form34">Subject</label>
+
+                </div>
+
+                <div class="md-form">
+
+                    <i class="fa fa-pencil prefix grey-text"></i>
+
+                    <textarea type="text" id="form8" class="md-textarea" style="height: 100px"></textarea>
+
+                    <label for="form8">Your message</label>
+
+                </div>
+
+                <div class="text-center">
+                    <button class="btn btn-unique">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
+                </div>
+
+            </form> <!-- Form Contact -->
+
+        </section>
 
     <% include elements/footer %>
