--- a/views/elements/menu.ejs
+++ b/views/elements/menu.ejs
@@ -5,7 +5,7 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="#">Grupos</a>
+        <a class="nav-link" href="/groups">Grupos</a>
     </li>
 
     <li class="nav-item">
@@ -26,15 +26,13 @@
 
             <% if (user.role === "root") { %>
 
-            <a class="dropdown-item" href="/admin/games">Gerencias Jogos</a>
+            <a class="dropdown-item" href="/admin/games">Gerenciar</a>
 
             <% } %>
 
             <a class="dropdown-item" href="#">Action 1</a>
 
             <a class="dropdown-item" href="#">Action 2</a>
-
-            <a class="dropdown-item" href="#">Action 3</a>
 
             <a class="dropdown-item" href="/logout">Logout</a>
         </div> <!-- Dropdown Menu -->
