--- a/views/new-account.ejs
+++ b/views/new-account.ejs
@@ -41,7 +41,7 @@
 
                 <div class="container">
 
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="/">
                         <img src="/img-futiba-club/logo.png" height="30" alt="Futiba Club">
                     </a>
 
@@ -67,8 +67,6 @@
                 <div class="row">
 
                     <form class="col" method="post">
-
-                        <p class="h5 text-center mb-4">Criar Conta</p>
 
                         <div class="md-form">
 
