--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,8 @@
 
     <head>
 
+        <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/Tlyy9su.png"/>
+
         <meta charset="utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -157,105 +159,7 @@
 
         </section> <!-- Section -->
 
-        <section>
-
-            <div class="container">
-
-                <div class="row">
-
-                    <div class="card col">
-
-                        <div class="card-body">
-
-                            <form>
-
-                                <!-- <p class="h5 text-center mb-4">Entrar</p> -->
-
-                                <div class="md-form">
-
-                                    <i class="fa fa-envelope prefix grey-text"></i>
-
-                                    <input type="text" id="orangeForm-email" class="form-control">
-
-                                    <label for="orangeForm-email">E-mail</label>
-
-                                </div>
-
-                                <div class="md-form">
-
-                                    <i class="fa fa-lock prefix grey-text"></i>
-
-                                    <input type="password" id="orangeForm-pass" class="form-control">
-
-                                    <label for="orangeForm-pass">Senha</label>
-
-                                </div>
-
-                                <div class="text-center">
-                                    <button class="btn btn-deep-orange">Entrar</button>
-                                </div>
-
-                            </form>
-
-                        </div> <!-- Card Body -->
-
-                    </div> <!-- Card Col -->
-
-                    <div class="card col">
-
-                        <div class="card-body">
-
-                            <form class="col">
-
-                                <!-- <p class="h5 text-center mb-4">Criar conta</p> -->
-
-                                <div class="md-form">
-
-                                    <i class="fa fa-user prefix grey-text"></i>
-
-                                    <input type="text" id="orangeForm-name" class="form-control">
-
-                                    <label for="orangeForm-name">Seu nome</label>
-
-                                </div>
-
-                                <div class="md-form">
-
-                                    <i class="fa fa-envelope prefix grey-text"></i>
-
-                                    <input type="text" id="orangeForm-email" class="form-control">
-
-                                    <label for="orangeForm-email">Seu e-mail</label>
-
-                                </div>
-
-                                <div class="md-form">
-
-                                    <i class="fa fa-lock prefix grey-text"></i>
-
-                                    <input type="password" id="orangeForm-pass" class="form-control">
-
-                                    <label for="orangeForm-pass">Sua senha</label>
-
-                                </div>
-
-                                <div class="text-center">
-                                    <button class="btn btn-deep-orange">Criar conta</button>
-                                </div>
-
-                            </form>
-
-                        </div> <!-- Card Body -->
-
-                    </div> <!-- Card Col -->
-
-                </div>  <!-- Row -->
-
-            </div> <!-- Container -->
-
-        </section> <!-- Section -->
-
-        <section>
+        <section class="contact-futiba">
 
             <form>
 
@@ -265,7 +169,7 @@
 
                     <input type="text" id="form3" class="form-control">
 
-                    <label for="form3">Your name</label>
+                    <label for="form3">Seu nome</label>
 
                 </div>
 
@@ -275,7 +179,7 @@
 
                     <input type="text" id="form2" class="form-control">
 
-                    <label for="form2">Your email</label>
+                    <label for="form2">Seu e-mail</label>
 
                 </div>
 
@@ -285,7 +189,7 @@
 
                     <input type="text" id="form32" class="form-control">
 
-                    <label for="form34">Subject</label>
+                    <label for="form34">Assunto</label>
 
                 </div>
 
@@ -295,12 +199,12 @@
 
                     <textarea type="text" id="form8" class="md-textarea" style="height: 100px"></textarea>
 
-                    <label for="form8">Your message</label>
+                    <label for="form8">Sua mensagem</label>
 
                 </div>
 
                 <div class="text-center">
-                    <button class="btn btn-unique">Send <i class="fa fa-paper-plane-o ml-1"></i></button>
+                    <button class="btn btn-unique">Enviar <i class="fa fa-paper-plane-o ml-1"></i></button>
                 </div>
 
             </form> <!-- Form Contact -->
