--- a/views/admin/games.ejs
+++ b/views/admin/games.ejs
@@ -90,11 +90,9 @@
                         <button class="btn btn-deep-orange">Criar Jogo</button>
                     </div>
 
-                    <input type="submit" value="Resultados" class="btn btn-success">
-
                 </form> <!-- Form Games -->
 
-                <form action="post">
+                <form method="post">
                     <table class="table table-striped">
 
                         <thead>
@@ -126,6 +124,8 @@
                         </tbody>
 
                     </table> <!-- Table Games -->
+
+                    <input type="submit" value="Resultados" class="btn btn-success">
 
                 </form>
 
