--- a/views/group.ejs
+++ b/views/group.ejs
@@ -148,7 +148,7 @@
                                     <% } %>
                                         <%= game.team_a %> Vs <%= game.team_b %>
                                     <% if(game.guess_b) { %>
-                                        <p style="color: #FF9961; display: inline;"><%= game.guess_a %></p>
+                                        <p style="color: #FF9961; display: inline;"><%= game.guess_b %></p>
                                     <% } else { %>
                                         <input class="form-control" name="team_<%= game.id %>[b]">
                                     <% } %>
