--- a/views/admin/games.ejs
+++ b/views/admin/games.ejs
@@ -64,7 +64,7 @@
 
             <div class="container">
 
-                <form class="row" method="post" action="/admin/games/results">
+                <form class="row" method="post">
 
                     <div class="md-form">
 
@@ -92,7 +92,7 @@
 
                 </form> <!-- Form Games -->
 
-                <form method="post">
+                <form method="post" action="/admin/games/results">
                     <table class="table table-striped">
 
                         <thead>
