--- a/views/elements/menu.ejs
+++ b/views/elements/menu.ejs
@@ -9,7 +9,7 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="#">Classificação</a>
+        <a class="nav-link" href="/classification">Classificação</a>
     </li>
 
     <% if (user) { %>
