--- a/views/login.ejs
+++ b/views/login.ejs
@@ -61,7 +61,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Classificação</a>
+                                <a class="nav-link" href="/classification">Classificação</a>
                             </li>
 
                             <li class="nav-item">
